# Robotics

./: .gitignore  CMakeLists.txt  README.md  read_uart.py
.cache/clangd/index/: common.c.C6F80C411AD5F6D5.idx  common.h.D06BCE96A4515B1B.idx  engine.c.A47EDC8386F20D28.idx  engine.h.EF03EBD3F07AFF21.idx  http.c.4DBB814C3634903E.idx  http.h.B2DE069D8417A1F7.idx  ir.c.09108BF67C1B00B4.idx  ir.h.CEC16BCC80FEB346.idx  main.c.C1B0F07C8048BC99.idx  mic.c.514A0F0E05847D78.idx  mic.h.9C9775BD3D393124.idx  motors.c.76B9114145B27632.idx  motors.h.1531CFD0CB823788.idx  wifi.c.023BE6AA387634F6.idx  wifi.h.2C21550639119CB5.idx
main/: CMakeLists.txt  main.c
main/Engine/: engine.c  engine.h
main/common/: common.c  common.h
main/http/: http.c  http.h
main/ir/: ir.c  ir.h
main/mic/: mic.c  mic.h
main/motor/: motors.c  motors.h
main/wifi/: wifi.c  wifi.h
